Fix bugs with Page Navigation CTAs and some more spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -183,7 +183,7 @@ body
     color: white;
     flex: 1;
     cursor: pointer;
-		background-image: url($baseurl + "/assets/img/2017/blog-polygon-bg.png");
+		background-image: url($baseurl + "/assets/img/2017/pattern-main.png");
 		background-size: cover;
 		position: relative;
 
