--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,4 +1,6 @@
 #blog {
+  padding-bottom: 32px;
+
   #featured {
     @include content-padding;
     padding-top: 32px;
@@ -12,6 +14,8 @@
       padding-right: 48px;
       padding-bottom: 48px;
       position: relative;
+      background-image: url($baseurl + "/assets/img/2017/pattern-main.png");
+  		background-size: cover;
 
       .post-gradient-overlay {
         position: absolute;
@@ -19,26 +23,29 @@
         width: 100%;
         top: 0;
         left: 0;
+        z-index: 2;
         /* Safari 4-5, Chrome 1-9 */
-        background: -webkit-gradient(linear, top top, bottom bottom, from(rgba(255,255,255,0.1)), to(rgba(25,25,25,0.35)));
+        background: -webkit-gradient(linear, top top, bottom bottom, from(rgba(255,255,255,0.1)), to(rgba(25,25,25,0.5)));
         /* Safari 5.1, Chrome 10+ */
-        background: -webkit-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.35));
+        background: -webkit-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.5));
         /* Firefox 3.6+ */
-        background: -moz-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.35));
+        background: -moz-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.5));
         /* IE 10 */
-        background: -ms-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.35));
+        background: -ms-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.5));
         /* Opera 11.10+ */
-        background: -o-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.35));
+        background: -o-linear-gradient(top, rgba(255,255,255,0.1), rgba(25,25,25,0.5));
       }
 
       .anchored-title {
         color: white;
+        z-index: 3;
       }
 
       .featured-post-title {
         font: 21px $base-font-family-extra-thin;
         color: white;
         margin-top: 14px;
+        z-index: 3;
       }
 
       &:hover {
@@ -111,7 +118,8 @@
 }
 
 #blog-legal {
-  @include content-padding-full;
+  @include content-padding;
+  padding-top: 24px;
   font: 16px $base-font-family-thin;
   line-height: 24px;
   color: #8a8a8a;
